# stellaris-ironman-cheat

./: .ghtraf.json  .gitignore  .repokit.json  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  conftest.py  pyproject.toml  stellaris_ironman.py
.github/: release-template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  release.yml
docs/: platform-support.md
docs/stats/: README.md  index.html
stellaris_ironman_cheat/: __init__.py  __main__.py  _version.py
tests/: conftest.py  test_ironman.py  test_version.py
