[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stellaris-ironman-cheat"
dynamic = ["version"]
description = "A new project created from git-repokit-template"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "djdarcy", email = "djdarcy@users.noreply.github.com"},
]
keywords = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/djdarcy/stellaris-ironman-cheat"
Repository = "https://github.com/djdarcy/stellaris-ironman-cheat"
Issues = "https://github.com/djdarcy/stellaris-ironman-cheat/issues"

[project.scripts]
stellaris-ironman-cheat = "stellaris_ironman_cheat.cli:main"

[tool.setuptools.dynamic]
version = {attr = "stellaris_ironman_cheat._version.PIP_VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["stellaris_ironman_cheat", "stellaris_ironman_cheat.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.repokit-common]
version-source = "stellaris_ironman_cheat/_version.py"
changelog = "CHANGELOG.md"
repo-url = "https://github.com/djdarcy/stellaris-ironman-cheat"
tag-prefix = "v"
private-patterns = ["private/", "local/", ".env"]
