[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stellaris-ironman-cheat"
dynamic = ["version"]
description = "Toggle Ironman mode on/off in Stellaris .sav files -- a single-file, dependency-free Python CLI."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.8"
authors = [
    {name = "Dustin Darcy", email = "6962246+djdarcy@users.noreply.github.com"},
]
keywords = [
    "stellaris",
    "paradox",
    "save-editor",
    "savegame",
    "ironman",
    "cli",
    "modding",
    "game-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/djdarcy/stellaris-ironman-cheat"
Repository = "https://github.com/djdarcy/stellaris-ironman-cheat"
Issues = "https://github.com/djdarcy/stellaris-ironman-cheat/issues"

[project.scripts]
stellaris-ironman = "stellaris_ironman:main"

[tool.setuptools]
py-modules = ["stellaris_ironman"]

[tool.setuptools.dynamic]
version = {attr = "stellaris_ironman.PIP_VERSION"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.repokit-common]
version-source = "stellaris_ironman.py"
changelog = "CHANGELOG.md"
repo-url = "https://github.com/djdarcy/stellaris-ironman-cheat"
tag-prefix = "v"
private-patterns = ["private/", "local/", ".env"]
